--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  Fonts
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
@@ -25,23 +24,57 @@
 
 <body>
 
-  <!--   
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <main class="main-card container">
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+    <div class="illustration-section">
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+      <div class="img-wrapper">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem repudiandae earum
+        <img src="/images/illustration-woman-online-desktop.svg" alt="" class="illustration-woman">
+        <img src="/images/illustration-box-desktop.svg" alt="" class="illustration-box">
+        <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop">
+      </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+    </div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours. -->
+    <div class="faq-section">
+      <h2>FAQ</h2>
+
+      <div class="accordions-section">
+
+        <div class="accordion">
+          <h3>How many team members can I invite?</h3>
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</p>
+        </div>
+
+        <div class="accordion">
+          <h3>What is the maximum file upload size?</h3>
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
+
+        <div class="accordion">
+          <h3>How do I reset my password?</h3>
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
+
+        <div class="accordion">
+          <h3>Can I cancel my subscription?</h3>
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+
+        <div class="accordion">
+          <h3>Do you provide additional support?</h3>
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        </div>
+
+
+      </div>
+
+    </div>
+
+  </main>
 
 
 </body>
