--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <div class="illustration-section">
 
       <div class="img-wrapper">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem repudiandae earum
-        <img src="/images/illustration-woman-online-desktop.svg" alt="" class="illustration-woman">
-        <img src="/images/illustration-box-desktop.svg" alt="" class="illustration-box">
-        <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop">
+        <!-- <img src="/images/illustration-woman-online-desktop.svg" alt="" class="illustration-woman">
+        <img src="/images/illustration-box-desktop.svg" alt="" class="illustration-box"> -->
+        <!-- <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop"> -->
+
+        <div class="bg-pattern-desktop"></div>
+
       </div>
 
     </div>
