--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="illustration-section">
 
       <div class="img-wrapper">
-        <!-- <img src="/images/illustration-woman-online-desktop.svg" alt="" class="illustration-woman">
-        <img src="/images/illustration-box-desktop.svg" alt="" class="illustration-box"> -->
-        <!-- <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop"> -->
+        <img src="/images/illustration-woman-online-desktop.svg" alt="" class="svg illustration-woman">
+        <img src="/images/illustration-box-desktop.svg" alt="" class="svg illustration-box">
+        <img src="/images/bg-pattern-desktop.svg" alt="" class="svg bg-pattern-desktop">
 
-        <div class="bg-pattern-desktop"></div>
+        <!-- <div class="bg-pattern-desktop"></div> -->
 
       </div>
 
