desktop image positioning done

--- a/index.html
+++ b/index.html
@@ -28,61 +28,65 @@
 
     <div class="illustration-section">
 
-      <div class="column">
+      <div class="desktop">
+        <img src="/images/illustration-box-desktop.svg" alt="" class="illustration-box">
         <div class="img-wrapper">
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, totam?</p> -->
-          <img src="/images/illustration-woman-online-desktop.svg" alt="" class="svg illustration-woman">
-          <img src="/images/illustration-box-desktop.svg" alt="" class="svg illustration-box">
-          <img src="/images/bg-pattern-desktop.svg" alt="" class="svg bg-pattern-desktop">
 
-          <!-- <div class="bg-pattern-desktop"></div> -->
+          <img src="/images/illustration-woman-online-desktop.svg" alt="" class="illustration-woman">
+          <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop">
+
 
         </div>
       </div>
+
+
+
+
+
 
 
     </div>
 
     <div class="faq-section">
 
-      <div class="column">
-        <h2>FAQ</h2>
 
-        <div class="accordions-section">
+      <h2>FAQ</h2>
 
-          <div class="accordion">
-            <h3>How many team members can I invite?</h3>
-            <p>You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.</p>
-          </div>
+      <div class="accordions-section">
 
-          <div class="accordion">
-            <h3>What is the maximum file upload size?</h3>
-            <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
-          </div>
+        <div class="accordion">
+          <h3>How many team members can I invite?</h3>
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</p>
+        </div>
 
-          <div class="accordion">
-            <h3>How do I reset my password?</h3>
-            <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-              A reset link will be emailed to you.</p>
-          </div>
+        <div class="accordion">
+          <h3>What is the maximum file upload size?</h3>
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
 
-          <div class="accordion">
-            <h3>Can I cancel my subscription?</h3>
-            <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-          </div>
+        <div class="accordion">
+          <h3>How do I reset my password?</h3>
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
 
-          <div class="accordion">
-            <h3>Do you provide additional support?</h3>
-            <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        <div class="accordion">
+          <h3>Can I cancel my subscription?</h3>
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
 
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos reiciendis, amet cumque earum numquam, distinctio deserunt, at quisquam facere ut necessitatibus a aliquam repellat sequi? Dolor doloremque quis sed quae corrupti adipisci ea. Laboriosam nisi deleniti odio architecto ipsam nulla doloribus rerum fugiat doloremque error aspernatur fugit ratione optio neque, cum obcaecati distinctio illum consequatur facilis quia possimus ullam quis? Atque nam eius voluptatibus, inventore harum libero fugit ipsum. Animi cumque vero obcaecati omnis ad corrupti earum dolorum laboriosam mollitia tenetur, quae sunt itaque reiciendis veritatis minus consequuntur dolores excepturi, deleniti facere unde. Omnis necessitatibus ipsa, similique impedit repellat commodi?</p> -->
+        <div class="accordion">
+          <h3>Do you provide additional support?</h3>
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
 
-          </div>
 
 
         </div>
+
+
       </div>
+
 
 
     </div>
