--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="accordion">
           <h3>How many team members can I invite?</h3>
-          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+          <p class="active">You can invite up to 2 additional users on the Free plan. There is no limit on
             team members for the Premium plan.</p>
         </div>
 
@@ -93,7 +93,7 @@
 
   </main>
 
-
+<script src="/script.js"></script>
 </body>
 
 </html>
