--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 
+  
+
   <link rel="stylesheet" href="/styles.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
@@ -56,7 +58,7 @@
 
         <div class="accordion">
           <h3>How many team members can I invite?</h3>
-          <p class="active">You can invite up to 2 additional users on the Free plan. There is no limit on
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
             team members for the Premium plan.</p>
         </div>
 
@@ -89,11 +91,24 @@
 
 
 
+
+
+
+
+
+      
+
+
+
+
     </div>
+
 
   </main>
 
-<script src="/script.js"></script>
+
+  
+  <script src="/script.js"></script>
 </body>
 
 </html>
