--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
       </div>
 
 
+      <div class="mobile">
+
+        <div class="illustration-woman-mobile"></div>
+        <div class="bg-pattern-mobile"></div>
+
+      </div>
+
+
     </div>
 
 
